# rust-vite-template

./: Cargo.toml  LICENSE_MIT  README.md  package.json  pnpm-lock.yaml
apps/docs/: package.json
apps/web/: package.json  vite.config.ts
apps/web/src/: main.ts
